--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
     <style type="text/css">
     body {
-        margin-top: 30px;
+        /*margin-top: 30px;*/
     }
 
     #msgArea {
-        display: none;
+        /*display: none;*/
     }
     </style>
 </head>
 
 <body>
-    <div id="app"></div>
+    <div id="app" class="full-container-layout"></div>
     <!-- <div class="container">
         <div id="userArea" class="row">
             <div class="col-md-12">
